--- a/force-app/main/default/classes/LeadEscalationTimer.cls
+++ b/force-app/main/default/classes/LeadEscalationTimer.cls
@@ -11,8 +11,8 @@ public class LeadEscalationTimer implements Schedulable {
     // Execute method for handling the scheduled job
     public void execute(SchedulableContext context) {
         System.debug('Executing LeadEscalationTimer for Lead ID: ' + leadId + ' at level: ' + level);
-        
-        Lead lead = [SELECT Status, OwnerId, Name FROM Lead WHERE Id = :leadId LIMIT 1];
+        List<Lead> ldList = new List<Lead>();
+        Lead lead = [SELECT Status, OwnerId, Name, TAT_deadline__c FROM Lead WHERE Id = :leadId LIMIT 1];
         
         System.debug('Lead Status: ' + lead.Status + ', Lead OwnerId: ' + lead.OwnerId);
         
@@ -22,6 +22,8 @@ public class LeadEscalationTimer implements Schedulable {
                 System.debug('Lead status is not Closed. Escalating...');
                 // Escalate and send email
                 lead.Status = 'Escalated';
+                lead.TAT_deadline__c = System.now().addMinutes(30);
+                lead.Escalation_Level__c = 'Level 2';
                 update lead;
                 escalateLead(lead);
                 
@@ -38,14 +40,11 @@ public class LeadEscalationTimer implements Schedulable {
             // Second timer logic: after another 30 minutes
             if (!(lead.Status == 'Lead Won' || lead.Status == 'Lead Lost' || lead.Status == 'Awaiting Customer response')) {
                 System.debug('Lead status is still not Closed after second timer. Final escalation...');
-                // Final escalation logic
                 escalateLeadToManagerOfManager(lead);
             } else {
                 System.debug('Lead status is Closed after second timer, no further escalation required.');
             }
         }
-        
-        // After completing the current job (either level 1 or level 2), cancel the job
         cancelJob(context);
     }
     
@@ -53,12 +52,10 @@ public class LeadEscalationTimer implements Schedulable {
     private void cancelJob(SchedulableContext context) {
         String jobId = context.getTriggerId();
         if (jobId != null) {
-            System.abortJob(jobId);  // Aborts the current job after execution
+            System.abortJob(jobId);
             System.debug('Job ' + jobId + ' has been aborted after execution.');
         }
     }
-
-    // Method to escalate the lead (e.g., send an email to the owner's manager)
     private void escalateLead(Lead lead) {
         System.debug('Escalating lead with ID: ' + lead.Id);
         
@@ -83,7 +80,8 @@ public class LeadEscalationTimer implements Schedulable {
             mail.setPlainTextBody(emailBody);
             Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail });
             if (manager != null) {
-            sendCustomNotification(lead.OwnerId, lead.Id);
+                set<String> notificationReceivers = new Set<String>{lead.OwnerId, manager.Id};
+                    sendCustomNotification(notificationReceivers, lead.Id);
         }
         } else {
             System.debug('Owner does not have a manager assigned.');
@@ -114,6 +112,8 @@ public class LeadEscalationTimer implements Schedulable {
             mail.setSubject('Final Lead Escalation');
             mail.setPlainTextBody(emailBody);
             Messaging.sendEmail(new Messaging.SingleEmailMessage[] { mail });
+            set<String> notificationReceivers = new Set<String>{lead.OwnerId, manager.Id, managerOfManager.Id};
+                    sendCustomNotification(notificationReceivers, lead.Id);
         } else {
             System.debug('Manager does not have a manager assigned.');
         }
@@ -121,7 +121,7 @@ public class LeadEscalationTimer implements Schedulable {
         System.debug('Owner does not have a manager assigned.');
     }
 }
-   private void sendCustomNotification(Id ownerId, Id relatedRecordId) {
+   private void sendCustomNotification(Set<String> notificationReceivers, Id relatedRecordId) {
     try {
         CustomNotificationType cnType = [SELECT Id FROM CustomNotificationType WHERE DeveloperName = 'Lead_Escalation_Notification'];
         Messaging.CustomNotification notification = new Messaging.CustomNotification();
@@ -131,8 +131,8 @@ public class LeadEscalationTimer implements Schedulable {
         notification.setTitle('Lead Got Escalated');  // Title of the notification
         notification.setBody('Please check the Lead details');  // Body of the notification
         notification.setTargetId(relatedRecordId);  // This will link the notification to the specific Lead record
-        notification.send(new Set<String>{ownerId});
-        System.debug('Custom Notification sent to user: ' + ownerId);
+        notification.send(notificationReceivers);
+        System.debug('Custom Notification sent to user: ' + notificationReceivers);
     } catch (Exception e) {
         System.debug('Error sending Custom Notification: ' + e.getMessage());
     }
